[project]
name = "cs5446-asmt2"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "gymnasium (>=1.2.2,<2.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pyrddlgym (>=2.5,<3.0)",
    "torch (>=2.9.0,<3.0.0)",
    "rddlrepository (>=2.1,<3.0)",
    "marimo (>=0.17.7,<0.18.0)",
    "ipython (>=9.6.0,<10.0.0)",
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
